# line-video-scrapper

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: components.rs  main.rs  scraper.rs
src/components/: app.rs
