[package]
name = "line-video-scrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "^0.19"
reqwest = { version = "^0.11" }
tokio = { version = "1", features = ["full"] }
scraper = "^0.12.0"
select = "^0.5.0"
anyhow = "1.0.56"
downloader = "0.2.6"
